Fix gap

--- a/aoso-teams-and-schedule/assets/scss/aoso-teams-schedule.scss
+++ b/aoso-teams-and-schedule/assets/scss/aoso-teams-schedule.scss
@@ -45,7 +45,7 @@ article.aoso_schedule {
 }
 
 .aoso-schedule {
-    --gap: 0.5rem;
+    --gap: 0.75rem;
 
     margin-block: 1rem;
     margin-inline: 0;
@@ -210,6 +210,14 @@ article.aoso_schedule {
     p {
         &:last-of-type {
             margin-block-end: 0;
+        }
+    }
+}
+
+.aoso-matchday {
+    &:last-of-type {
+        hr {
+            display: none;
         }
     }
 }
